styles/style.css
/* ... */
.book-section-non-text-content--fs-polyfill {
    z-index: 100;
}

/* landing-update-banner */
.landing-update-banner {
    position: relative;
    top: 0;
    margin-bottom: 20px;
    padding: 1em;
    background: #757575;
    color: #fff;
    text-align: center;
}

.landing-update-banner__link {
    color: inherit;
    text-decoration: underline;
}

@media (min-width:900px) {
    .landing-update-banner {
        margin-bottom: 0;
    }
}

/* section */
.page {
    margin: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: sans-serif;
    background: #717171;
}

.page__content-container {
    flex: 1;
    position: relative;
    min-height: 0;
}

/* header */
.header {
    position: fixed;
    top: 0;
    box-sizing: border-box;
    width: 100%;
    height: 56px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 12px;
    background-color: #15404e;
    z-index: 2;
}

@media (min-width:900px) {
    .header {
        flex: 0 0 auto;
        position: static;
        height: 80px;
        padding: 0 24px;
    }
}

.header__nav-btn {
    flex: 0 0 auto;
    margin: 0;
    width: 1.25em;
    height: 1.25em;
    border: none;
    padding: 0;
    background: none;
}

@media (min-width:900px) {
    .header__nav-btn {
        width: 1.75em;
        height: 1.75em;
    }
}

.header__nav-icon {
    width: 100%;
    height: 100%;
    fill: #fff;
}

.header__title {
    max-width: 265px;
    font-size: 1.5em;
    font-weight: 900;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: #ffffff;
}

@media (min-width:900px) {
    .header__title {
        display: none;
    }
}

.header__home-link {
    flex: 0 0 auto;
    height: 100%;
    display: flex;
    align-items: center;
}

@media (min-width:900px) {
    .header__home-link {
        margin-left: auto;
    }
}

.header__logo {
    height: 70%;
    width: auto;
    transform: translateY(10%);
}

@media (min-width: 900px) {
    .header__logo--mobile {
        display: none;
    }
}

@media (max-width:900px) {
    .header__logo--desktop {
        display: none;
    }
}

/* nav */
.nav {
    position: fixed;
    top: 56px;
    bottom: 0;
    left: 0;
    box-sizing: border-box;
    height: auto;
    max-height: calc(100vh - 56px);
    width: 65%;
    padding: 0.75em 0em 0.75em max(0.75em, env(safe-area-inset-left));
    background: #fff;
    color: #363636;
    overflow-y: scroll;
    z-index: 2;
    transition: max-height 0.5s, padding 0.5s, width 0.25s;
}

@media (min-width:900px) {
    .nav {
        top: 80px;
        bottom: initial;
        max-height: calc(100vh - 80px);
        width: 21.75em;
    }
}

.nav--searching {
    width: 85%;
}

.nav--collapsed {
    max-height: 0px;
    padding: 0em 0em 0em 0.75em;
    visibility: hidden;
    transition: max-height 0.5s, padding 0.5s, visibility 0s 0.5s;
}

.nav__chapter-list {
    padding-inline-start: 0;
    margin-block-start: 0;
    margin-block-end: 0;
    list-style: none;
}

.nav__chapter-list--searching {
    display: none;
}

.nav__chapter-header-container {
    display: flex;
    align-items: center;
}

.nav__link {
    display: block;
    padding: 0.75em 0;
    color: inherit;
    text-decoration: none;
}

@media (min-width:900px) {
    .nav__link {
        padding: 0.75em 0 0.75em 0.75em;
    }
}

.nav__link:hover, .nav__link--current {
    font-style: italic;
}

.nav__link--ch1:hover, .nav__link--ch1.nav__link--current {
    background-color: #a7a9ac;
}

.nav__link--ch2:hover, .nav__link--ch2.nav__link--current {
    background-color: #bcd3ed;
}

.nav__link--ch3:hover, .nav__link--ch3.nav__link--current {
    background-color: #9ac3c7;
}

.nav__link--ch4:hover, .nav__link--ch4.nav__link--current {
    background-color: #99bd99;
}

.nav__link--ch5:hover, .nav__link--ch5.nav__link--current {
    background-color: #ffef99;
}

.nav__link--ch6:hover, .nav__link--ch6.nav__link--current {
    background-color: #ffc799;
}

.nav__link--ch7:hover, .nav__link--ch7.nav__link--current {
    background-color: #fab19c;
}

.nav__link--ch8:hover, .nav__link--ch8.nav__link--current {
    background-color: #e0a1a4;
}

.nav__link--ch9:hover, .nav__link--ch9.nav__link--current {
    background-color: #c29db2;
}

.nav__link--ch10:hover, .nav__link--ch10.nav__link--current {
    background-color: #baafcc;
}

.nav__chapter-header-link {
    flex: 1;
}

.nav__section-text {
    font-weight: 600;
}

.nav__section-list-toggle {
    margin: 0;
    width: 2.625em;
    height: 2.625em;
    border: none;
    padding: 0.75em;
    background: none;
}

.nav__section-list-toggle-icon {
    width: 100%;
    height: 100%;
    display: inline-block;
    fill: #8c8c8c;
    transition: transform 1s;
}

.nav__section-list-toggle[aria-expanded='true'] .nav__section-list-toggle-icon {
    transform: rotate(180deg);
}

.nav__section-list {
    height: auto;
    padding-left: 16px;
    overflow: hidden;
    transition: height 1s;
}

.nav__section-list--collapsed {
    visibility: hidden;
    transition: height 1s, visibility 0s 1s;
}

.nav__appendix-entry {
    height: 2.625em;
    padding-left: 0.75em;
    line-height: 2.625em;
    color: #757575;
    font-weight: 600;
    cursor: not-allowed;
}

.nav__hr-break {
    height: 1px;
    margin: 4px 0 4px -16px;
    background: #000;
}

@media (min-width:900px) {
    .nav__footer-entry {
        display: none;
    }
}

.nav__offline-entry {
    color: #525252;
}

@media (max-width:900px) {
    .nav__offline-entry {
        display: none;
    }
}

/* nav-arrow */
.nav-arrow {
    width: 1.25em;
    fill: #f5f5f5;
    text-decoration: none;
    transition: fill 0.25s;
}

.nav-arrow:hover {
    fill: #262626;
}

/* main-non-text-container */
.main-non-text-container {
    position: fixed;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    padding: 56px 0.6em;
    display: flex;
    align-items: center;
    justify-content: center;
}
/* ... */

